--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,2 +1,14 @@
+---
+galaxy_info:
+  author: Taras Kunch
+  description: Install ruby gems to shared bundle dir
+  company: Rebbix
+  min_ansible_version: 1.4
+  platforms:
+  - name: Ubuntu
+    versions:
+    - precise
+  categories:
+  - system
 dependencies:
-  - { role: ruby-build }
+  - kunik.ruby-build
