Ignore errors if ruby is not installed yet

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: get current ruby version
   command: ruby --version
   register: ruby_version
+  ignore_errors: true
 
 - name: install
   sudo: true
