make sure that ruby is working correctly

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: check ruby executable
+  command: ruby -e ''
+  register: ruby_test
+  ignore_errors: true
+
 - name: get current ruby version
   command: ruby --version
   register: ruby_version
@@ -7,7 +12,7 @@
 - name: install
   become: yes
   command: ruby-build {{ ruby_via_ruby_build.version }} /usr/local
-  when: ruby_version.rc != 0 or ruby_version.stdout.find(ruby_via_ruby_build.version) == -1
+  when: ruby_test.rc !=0 or ruby_version.rc != 0 or ruby_version.stdout.find(ruby_via_ruby_build.version) == -1
 
 - name: disable gem documentation
   become: yes
